--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6",
-    "react-native-worklets": "0.5.1"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
